[package]
name = "subscription"
version = "0.1.0"
authors = ["wallyb"]
edition = "2021"
resolver = "2"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
cosmwasm-std = { version = "1.1.9" }
cosmwasm-schema = { version = "1.1.9" }
thiserror = { version = "1.0.26" }

cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
cw-utils = "1.0.1"
